# json-typedef-codegen

crates/cli/: Cargo.toml
crates/cli/src/: cli.yaml  main.rs
crates/target_csharp_system_text/src/: lib.rs
crates/target_go/src/: lib.rs
crates/target_java_jackson/src/: lib.rs
crates/target_nim/: Cargo.toml
crates/target_nim/src/: keywords  lib.rs
crates/target_proto/: Cargo.toml
crates/target_proto/src/: keywords  lib.rs
crates/target_python/src/: lib.rs
crates/target_ruby/src/: lib.rs
crates/target_rust/src/: lib.rs
crates/target_zig/: Cargo.toml
crates/target_zig/src/: keywords  lib.rs
