[package]
name = "jtd_codegen_cli"
version = "0.4.1"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[[bin]]
name = "jtd-codegen"
path = "src/main.rs"

[dependencies]
jtd-codegen = { path = "../core" }
jtd_codegen_target_csharp_system_text = { path = "../target_csharp_system_text" }
jtd_codegen_target_go = { path = "../target_go" }
jtd_codegen_target_java_jackson = { path = "../target_java_jackson" }
jtd_codegen_target_nim = { path = "../target_nim" }
jtd_codegen_target_proto = { path = "../target_proto" }
jtd_codegen_target_python = { path = "../target_python" }
jtd_codegen_target_ruby = { path = "../target_ruby" }
jtd_codegen_target_ruby_sig = { path = "../target_ruby_sig" }
jtd_codegen_target_rust = { path = "../target_rust" }
jtd_codegen_target_typescript = { path = "../target_typescript" }
jtd_codegen_target_zig = { path = "../target_zig" }
serde = "1.0"
serde_json = "1.0"
jtd = "0.2.1"
clap = { version = "2.33.3", features = ["yaml"] }
colored = "2.0.0"
anyhow = "1.0"
mimalloc = { version = "0.1.37", default-features = false }
